# zip_viewer2

./: CMakeLists.txt  QtZipViewerApp.cpp  QtZipViewerApp.h  QtZipViewerApp.qrc  QtZipViewerApp.ui  ZipVisualizer.cpp  ZipVisualizer.h  main.cpp
